Add device key action to kill app [1/3]
Signed-off-by: Pranav Vashi <neobuddy89@gmail.com>
Signed-off-by: neobuddy89 <neobuddy89@gmail.com>
Signed-off-by: Pranav Vashi <neobuddy89@gmail.com>

--- a/lineage/res/res/values/config.xml
+++ b/lineage/res/res/values/config.xml
@@ -161,6 +161,7 @@
             7 - Sleep
             8 - Last app
             9 - Toggle split screen
+            10 - Close app
          This needs to match the enums in
          sdk/src/java/org/lineageos/internal/util/DeviceKeysConstants.java.
     -->
@@ -177,6 +178,7 @@
             7 - Sleep
             8 - Last app
             9 - Toggle split screen
+            10 - Close app
          This needs to match the enums in
          sdk/src/java/org/lineageos/internal/util/DeviceKeysConstants.java.
     -->
@@ -193,6 +195,7 @@
             7 - Sleep
             8 - Last app
             9 - Toggle split screen
+            10 - Close app
          This needs to match the enums in
          sdk/src/java/org/lineageos/internal/util/DeviceKeysConstants.java.
     -->
@@ -209,6 +212,7 @@
             7 - Sleep
             8 - Last app
             9 - Toggle split screen
+            10 - Close app
          This needs to match the enums in
          sdk/src/java/org/lineageos/internal/util/DeviceKeysConstants.java.
     -->
