--- a/lineage/res/res/values/config.xml
+++ b/lineage/res/res/values/config.xml
@@ -165,6 +165,7 @@
             7 - Sleep
             8 - Last app
             9 - Toggle split screen
+            10 - Close app
          This needs to match the enums in
          sdk/src/java/org/lineageos/internal/util/DeviceKeysConstants.java.
     -->
@@ -181,6 +182,7 @@
             7 - Sleep
             8 - Last app
             9 - Toggle split screen
+            10 - Close app
          This needs to match the enums in
          sdk/src/java/org/lineageos/internal/util/DeviceKeysConstants.java.
     -->
@@ -197,6 +199,7 @@
             7 - Sleep
             8 - Last app
             9 - Toggle split screen
+            10 - Close app
          This needs to match the enums in
          sdk/src/java/org/lineageos/internal/util/DeviceKeysConstants.java.
     -->
@@ -213,6 +216,7 @@
             7 - Sleep
             8 - Last app
             9 - Toggle split screen
+            10 - Close app
          This needs to match the enums in
          sdk/src/java/org/lineageos/internal/util/DeviceKeysConstants.java.
     -->
