--- a/lineage/res/res/values/config.xml
+++ b/lineage/res/res/values/config.xml
@@ -160,6 +160,7 @@
             7 - Sleep
             8 - Last app
             9 - Toggle split screen
+            10 - Close app
          This needs to match the enums in
          sdk/src/java/org/lineageos/internal/util/DeviceKeysConstants.java.
     -->
@@ -176,6 +177,7 @@
             7 - Sleep
             8 - Last app
             9 - Toggle split screen
+            10 - Close app
          This needs to match the enums in
          sdk/src/java/org/lineageos/internal/util/DeviceKeysConstants.java.
     -->
@@ -192,6 +194,7 @@
             7 - Sleep
             8 - Last app
             9 - Toggle split screen
+            10 - Close app
          This needs to match the enums in
          sdk/src/java/org/lineageos/internal/util/DeviceKeysConstants.java.
     -->
@@ -208,6 +211,7 @@
             7 - Sleep
             8 - Last app
             9 - Toggle split screen
+            10 - Close app
          This needs to match the enums in
          sdk/src/java/org/lineageos/internal/util/DeviceKeysConstants.java.
     -->
