Add customizable action for back long press button [1/3]
Signed-off-by: Pranav Vashi <neobuddy89@gmail.com>

--- a/lineage/res/res/values/config.xml
+++ b/lineage/res/res/values/config.xml
@@ -188,6 +188,23 @@
     -->
     <integer name="config_doubleTapOnHomeBehavior">0</integer>
 
+    <!-- Control the behavior when the user long presses the back button.
+            0 - Nothing
+            1 - Menu key
+            2 - Recent apps view in SystemUI
+            3 - Launch assist intent
+            4 - Voice Search
+            5 - In-app Search
+            6 - Launch camera
+            7 - Sleep
+            8 - Last app
+            9 - Toggle split screen
+            10 - Close app
+         This needs to match the enums in
+         sdk/src/java/org/lineageos/internal/util/DeviceKeysConstants.java.
+    -->
+    <integer name="config_longPressOnBackBehavior">10</integer>
+
     <!-- Control the behavior when the user long presses the menu button.
             0 - Nothing
             1 - Menu key
