--- a/lineage/res/res/values/config.xml
+++ b/lineage/res/res/values/config.xml
@@ -164,6 +164,7 @@
             8 - Last app
             9 - Toggle split screen
             10 - Kill foreground app
+            11 - Torch
          This needs to match the enums in
          sdk/src/java/org/lineageos/internal/util/DeviceKeysConstants.java.
     -->
@@ -181,6 +182,7 @@
             8 - Last app
             9 - Toggle split screen
             10 - Kill foreground app
+            11 - Torch
          This needs to match the enums in
          sdk/src/java/org/lineageos/internal/util/DeviceKeysConstants.java.
     -->
@@ -198,6 +200,7 @@
             8 - Last app
             9 - Toggle split screen
             10 - Kill foreground app
+            11 - Torch
          This needs to match the enums in
          sdk/src/java/org/lineageos/internal/util/DeviceKeysConstants.java.
     -->
@@ -215,6 +218,7 @@
             8 - Last app
             9 - Toggle split screen
             10 - Kill foreground app
+            11 - Torch
          This needs to match the enums in
          sdk/src/java/org/lineageos/internal/util/DeviceKeysConstants.java.
     -->
@@ -232,6 +236,7 @@
             8 - Last app
             9 - Toggle split screen
             10 - Kill foreground app
+            11 - Torch
          This needs to match the enums in
          sdk/src/java/org/lineageos/internal/util/DeviceKeysConstants.java.
     -->
