Add device key action to take screenshot [1/3]
Signed-off-by: Pranav Vashi <neobuddy89@gmail.com>

--- a/lineage/res/res/values/config.xml
+++ b/lineage/res/res/values/config.xml
@@ -165,6 +165,7 @@
             9 - Toggle split screen
             10 - Kill foreground app
             11 - Torch
+            12 - Screenshot
          This needs to match the enums in
          sdk/src/java/org/lineageos/internal/util/DeviceKeysConstants.java.
     -->
@@ -183,6 +184,7 @@
             9 - Toggle split screen
             10 - Kill foreground app
             11 - Torch
+            12 - Screenshot
          This needs to match the enums in
          sdk/src/java/org/lineageos/internal/util/DeviceKeysConstants.java.
     -->
@@ -201,6 +203,7 @@
             9 - Toggle split screen
             10 - Kill foreground app
             11 - Torch
+            12 - Screenshot
          This needs to match the enums in
          sdk/src/java/org/lineageos/internal/util/DeviceKeysConstants.java.
     -->
@@ -219,6 +222,7 @@
             9 - Toggle split screen
             10 - Kill foreground app
             11 - Torch
+            12 - Screenshot
          This needs to match the enums in
          sdk/src/java/org/lineageos/internal/util/DeviceKeysConstants.java.
     -->
@@ -237,6 +241,7 @@
             9 - Toggle split screen
             10 - Kill foreground app
             11 - Torch
+            12 - Screenshot
          This needs to match the enums in
          sdk/src/java/org/lineageos/internal/util/DeviceKeysConstants.java.
     -->
