--- a/lineage/res/res/values/config.xml
+++ b/lineage/res/res/values/config.xml
@@ -164,6 +164,7 @@
             9 - Toggle split screen
             10 - Close app
             11 - Torch
+            12 - Screenshot
          This needs to match the enums in
          sdk/src/java/org/lineageos/internal/util/DeviceKeysConstants.java.
     -->
@@ -182,6 +183,7 @@
             9 - Toggle split screen
             10 - Close app
             11 - Torch
+            12 - Screenshot
          This needs to match the enums in
          sdk/src/java/org/lineageos/internal/util/DeviceKeysConstants.java.
     -->
@@ -200,6 +202,7 @@
             9 - Toggle split screen
             10 - Close app
             11 - Torch
+            12 - Screenshot
          This needs to match the enums in
          sdk/src/java/org/lineageos/internal/util/DeviceKeysConstants.java.
     -->
@@ -218,6 +221,7 @@
             9 - Toggle split screen
             10 - Close app
             11 - Torch
+            12 - Screenshot
          This needs to match the enums in
          sdk/src/java/org/lineageos/internal/util/DeviceKeysConstants.java.
     -->
@@ -236,6 +240,7 @@
             9 - Toggle split screen
             10 - Close app
             11 - Torch
+            12 - Screenshot
          This needs to match the enums in
          sdk/src/java/org/lineageos/internal/util/DeviceKeysConstants.java.
     -->
