--- a/lineage/res/res/values/config.xml
+++ b/lineage/res/res/values/config.xml
@@ -164,6 +164,7 @@
             10 - Close app
             11 - Torch
             12 - Screenshot
+            13 - Volume Panel
          This needs to match the enums in
          sdk/src/java/org/lineageos/internal/util/DeviceKeysConstants.java.
     -->
@@ -183,6 +184,7 @@
             10 - Close app
             11 - Torch
             12 - Screenshot
+            13 - Volume Panel
          This needs to match the enums in
          sdk/src/java/org/lineageos/internal/util/DeviceKeysConstants.java.
     -->
@@ -202,6 +204,7 @@
             10 - Close app
             11 - Torch
             12 - Screenshot
+            13 - Volume Panel
          This needs to match the enums in
          sdk/src/java/org/lineageos/internal/util/DeviceKeysConstants.java.
     -->
@@ -221,6 +224,7 @@
             10 - Close app
             11 - Torch
             12 - Screenshot
+            13 - Volume Panel
          This needs to match the enums in
          sdk/src/java/org/lineageos/internal/util/DeviceKeysConstants.java.
     -->
@@ -240,6 +244,7 @@
             10 - Close app
             11 - Torch
             12 - Screenshot
+            13 - Volume Panel
          This needs to match the enums in
          sdk/src/java/org/lineageos/internal/util/DeviceKeysConstants.java.
     -->
