Add device key action to Clear notifications [2/3]
Change-Id: I98912d8f3467b4bd32facc6da1c90b95e11611ae

--- a/lineage/res/res/values/config.xml
+++ b/lineage/res/res/values/config.xml
@@ -165,6 +165,7 @@
             11 - Torch
             12 - Screenshot
             13 - Volume Panel
+            14 - Clear All Notifications
          This needs to match the enums in
          sdk/src/java/org/lineageos/internal/util/DeviceKeysConstants.java.
     -->
@@ -185,6 +186,7 @@
             11 - Torch
             12 - Screenshot
             13 - Volume Panel
+            14 - Clear All Notifications
          This needs to match the enums in
          sdk/src/java/org/lineageos/internal/util/DeviceKeysConstants.java.
     -->
@@ -205,6 +207,7 @@
             11 - Torch
             12 - Screenshot
             13 - Volume Panel
+            14 - Clear All Notifications
          This needs to match the enums in
          sdk/src/java/org/lineageos/internal/util/DeviceKeysConstants.java.
     -->
@@ -225,6 +228,7 @@
             11 - Torch
             12 - Screenshot
             13 - Volume Panel
+            14 - Clear All Notifications
          This needs to match the enums in
          sdk/src/java/org/lineageos/internal/util/DeviceKeysConstants.java.
     -->
@@ -245,6 +249,7 @@
             11 - Torch
             12 - Screenshot
             13 - Volume Panel
+            14 - Clear All Notifications
          This needs to match the enums in
          sdk/src/java/org/lineageos/internal/util/DeviceKeysConstants.java.
     -->
