--- a/lineage/res/res/values/config.xml
+++ b/lineage/res/res/values/config.xml
@@ -166,6 +166,7 @@
             12 - Screenshot
             13 - Volume Panel
             14 - Clear All Notifications
+            15 - Notifications
          This needs to match the enums in
          sdk/src/java/org/lineageos/internal/util/DeviceKeysConstants.java.
     -->
@@ -187,6 +188,7 @@
             12 - Screenshot
             13 - Volume Panel
             14 - Clear All Notifications
+            15 - Notifications
          This needs to match the enums in
          sdk/src/java/org/lineageos/internal/util/DeviceKeysConstants.java.
     -->
@@ -208,6 +210,7 @@
             12 - Screenshot
             13 - Volume Panel
             14 - Clear All Notifications
+            15 - Notifications
          This needs to match the enums in
          sdk/src/java/org/lineageos/internal/util/DeviceKeysConstants.java.
     -->
@@ -229,6 +232,7 @@
             12 - Screenshot
             13 - Volume Panel
             14 - Clear All Notifications
+            15 - Notifications
          This needs to match the enums in
          sdk/src/java/org/lineageos/internal/util/DeviceKeysConstants.java.
     -->
@@ -250,6 +254,7 @@
             12 - Screenshot
             13 - Volume Panel
             14 - Clear All Notifications
+            15 - Notifications
          This needs to match the enums in
          sdk/src/java/org/lineageos/internal/util/DeviceKeysConstants.java.
     -->
