Add more custom actions [2/3]
- QS panel
- Ringer modes

Change-Id: I37f70cc8b6178e3928a0ba64eb1b0d32d09c7201

--- a/lineage/res/res/values/config.xml
+++ b/lineage/res/res/values/config.xml
@@ -167,6 +167,8 @@
             13 - Volume Panel
             14 - Clear All Notifications
             15 - Notifications
+            16 - Toggle Qs Panel
+            17 - Ringer Modes
          This needs to match the enums in
          sdk/src/java/org/lineageos/internal/util/DeviceKeysConstants.java.
     -->
@@ -189,6 +191,8 @@
             13 - Volume Panel
             14 - Clear All Notifications
             15 - Notifications
+            16 - Toggle Qs Panel
+            17 - Ringer Modes
          This needs to match the enums in
          sdk/src/java/org/lineageos/internal/util/DeviceKeysConstants.java.
     -->
@@ -211,6 +215,8 @@
             13 - Volume Panel
             14 - Clear All Notifications
             15 - Notifications
+            16 - Toggle Qs Panel
+            17 - Ringer Modes
          This needs to match the enums in
          sdk/src/java/org/lineageos/internal/util/DeviceKeysConstants.java.
     -->
@@ -233,6 +239,8 @@
             13 - Volume Panel
             14 - Clear All Notifications
             15 - Notifications
+            16 - Toggle Qs Panel
+            17 - Ringer Modes
          This needs to match the enums in
          sdk/src/java/org/lineageos/internal/util/DeviceKeysConstants.java.
     -->
@@ -255,6 +263,8 @@
             13 - Volume Panel
             14 - Clear All Notifications
             15 - Notifications
+            16 - Toggle Qs Panel
+            17 - Ringer Modes
          This needs to match the enums in
          sdk/src/java/org/lineageos/internal/util/DeviceKeysConstants.java.
     -->
