--- a/lineage/res/res/values/config.xml
+++ b/lineage/res/res/values/config.xml
@@ -166,6 +166,8 @@
             13 - Volume Panel
             14 - Clear All Notifications
             15 - Notifications
+            16 - Toggle Qs Panel
+            17 - Ringer Modes
          This needs to match the enums in
          sdk/src/java/org/lineageos/internal/util/DeviceKeysConstants.java.
     -->
@@ -188,6 +190,8 @@
             13 - Volume Panel
             14 - Clear All Notifications
             15 - Notifications
+            16 - Toggle Qs Panel
+            17 - Ringer Modes
          This needs to match the enums in
          sdk/src/java/org/lineageos/internal/util/DeviceKeysConstants.java.
     -->
@@ -210,6 +214,8 @@
             13 - Volume Panel
             14 - Clear All Notifications
             15 - Notifications
+            16 - Toggle Qs Panel
+            17 - Ringer Modes
          This needs to match the enums in
          sdk/src/java/org/lineageos/internal/util/DeviceKeysConstants.java.
     -->
@@ -232,6 +238,8 @@
             13 - Volume Panel
             14 - Clear All Notifications
             15 - Notifications
+            16 - Toggle Qs Panel
+            17 - Ringer Modes
          This needs to match the enums in
          sdk/src/java/org/lineageos/internal/util/DeviceKeysConstants.java.
     -->
@@ -254,6 +262,8 @@
             13 - Volume Panel
             14 - Clear All Notifications
             15 - Notifications
+            16 - Toggle Qs Panel
+            17 - Ringer Modes
          This needs to match the enums in
          sdk/src/java/org/lineageos/internal/util/DeviceKeysConstants.java.
     -->
