--- a/lineage/res/res/values/config.xml
+++ b/lineage/res/res/values/config.xml
@@ -166,6 +166,11 @@
             10 - Kill foreground app
             11 - Torch
             12 - Screenshot
+            13 - Volume Panel
+            14 - Clear All Notifications
+            15 - Notifications
+            16 - Toggle Qs Panel
+            17 - Ringer Modes
          This needs to match the enums in
          sdk/src/java/org/lineageos/internal/util/DeviceKeysConstants.java.
     -->
@@ -185,6 +190,11 @@
             10 - Kill foreground app
             11 - Torch
             12 - Screenshot
+            13 - Volume Panel
+            14 - Clear All Notifications
+            15 - Notifications
+            16 - Toggle Qs Panel
+            17 - Ringer Modes
          This needs to match the enums in
          sdk/src/java/org/lineageos/internal/util/DeviceKeysConstants.java.
     -->
@@ -204,6 +214,11 @@
             10 - Kill foreground app
             11 - Torch
             12 - Screenshot
+            13 - Volume Panel
+            14 - Clear All Notifications
+            15 - Notifications
+            16 - Toggle Qs Panel
+            17 - Ringer Modes
          This needs to match the enums in
          sdk/src/java/org/lineageos/internal/util/DeviceKeysConstants.java.
     -->
@@ -223,6 +238,11 @@
             10 - Kill foreground app
             11 - Torch
             12 - Screenshot
+            13 - Volume Panel
+            14 - Clear All Notifications
+            15 - Notifications
+            16 - Toggle Qs Panel
+            17 - Ringer Modes
          This needs to match the enums in
          sdk/src/java/org/lineageos/internal/util/DeviceKeysConstants.java.
     -->
@@ -242,6 +262,11 @@
             10 - Kill foreground app
             11 - Torch
             12 - Screenshot
+            13 - Volume Panel
+            14 - Clear All Notifications
+            15 - Notifications
+            16 - Toggle Qs Panel
+            17 - Ringer Modes
          This needs to match the enums in
          sdk/src/java/org/lineageos/internal/util/DeviceKeysConstants.java.
     -->
