--- a/lineage/res/res/values/config.xml
+++ b/lineage/res/res/values/config.xml
@@ -173,6 +173,30 @@
     -->
     <integer name="config_longPressOnBackBehavior">0</integer>
 
+    <!-- Control the behavior when the user double-taps the back button.
+            0 - Nothing
+            1 - Menu key
+            2 - Recent apps view in SystemUI
+            3 - Launch assist intent
+            4 - Voice Search
+            5 - In-app Search
+            6 - Launch camera
+            7 - Sleep
+            8 - Last app
+            9 - Toggle split screen
+            10 - Kill foreground app
+            11 - Torch
+            12 - Screenshot
+            13 - Volume Panel
+            14 - Clear All Notifications
+            15 - Notifications
+            16 - Toggle Qs Panel
+            17 - Ringer Modes
+         This needs to match the enums in
+         sdk/src/java/org/lineageos/internal/util/DeviceKeysConstants.java.
+    -->
+    <integer name="config_doubleTapOnBackBehavior">0</integer>
+
     <!-- Control the behavior when the user long presses the home button.
             0 - Nothing
             1 - Menu key
@@ -245,6 +269,30 @@
     -->
     <integer name="config_longPressOnMenuBehavior">2</integer>
 
+    <!-- Control the behavior when the user double-taps the menu button.
+            0 - Nothing
+            1 - Menu key
+            2 - Recent apps view in SystemUI
+            3 - Launch assist intent
+            4 - Voice Search
+            5 - In-app Search
+            6 - Launch camera
+            7 - Sleep
+            8 - Last app
+            9 - Toggle split screen
+            10 - Kill foreground app
+            11 - Torch
+            12 - Screenshot
+            13 - Volume Panel
+            14 - Clear All Notifications
+            15 - Notifications
+            16 - Toggle Qs Panel
+            17 - Ringer Modes
+         This needs to match the enums in
+         sdk/src/java/org/lineageos/internal/util/DeviceKeysConstants.java.
+    -->
+    <integer name="config_doubleTapOnMenuBehavior">0</integer>
+
     <!-- Control the behavior when the user long presses the app switch button.
             0 - Nothing
             1 - Menu key
@@ -268,6 +316,78 @@
          sdk/src/java/org/lineageos/internal/util/DeviceKeysConstants.java.
     -->
     <integer name="config_longPressOnAppSwitchBehavior">0</integer>
+
+    <!-- Control the behavior when the user double-taps the app switch button.
+            0 - Nothing
+            1 - Menu key
+            2 - Recent apps view in SystemUI
+            3 - Launch assist intent
+            4 - Voice Search
+            5 - In-app Search
+            6 - Launch camera
+            7 - Sleep
+            8 - Last app
+            9 - Toggle split screen
+            10 - Kill foreground app
+            11 - Torch
+            12 - Screenshot
+            13 - Volume Panel
+            14 - Clear All Notifications
+            15 - Notifications
+            16 - Toggle Qs Panel
+            17 - Ringer Modes
+         This needs to match the enums in
+         sdk/src/java/org/lineageos/internal/util/DeviceKeysConstants.java.
+    -->
+    <integer name="config_doubleTapOnAppSwitchBehavior">0</integer>
+
+    <!-- Control the behavior when the user long presses the assist button.
+            0 - Nothing
+            1 - Menu key
+            2 - Recent apps view in SystemUI
+            3 - Launch assist intent
+            4 - Voice Search
+            5 - In-app Search
+            6 - Launch camera
+            7 - Sleep
+            8 - Last app
+            9 - Toggle split screen
+            10 - Kill foreground app
+            11 - Torch
+            12 - Screenshot
+            13 - Volume Panel
+            14 - Clear All Notifications
+            15 - Notifications
+            16 - Toggle Qs Panel
+            17 - Ringer Modes
+         This needs to match the enums in
+         sdk/src/java/org/lineageos/internal/util/DeviceKeysConstants.java.
+    -->
+    <integer name="config_longPressOnAssistBehavior">4</integer>
+
+    <!-- Control the behavior when the user double-taps the assist button.
+            0 - Nothing
+            1 - Menu key
+            2 - Recent apps view in SystemUI
+            3 - Launch assist intent
+            4 - Voice Search
+            5 - In-app Search
+            6 - Launch camera
+            7 - Sleep
+            8 - Last app
+            9 - Toggle split screen
+            10 - Kill foreground app
+            11 - Torch
+            12 - Screenshot
+            13 - Volume Panel
+            14 - Clear All Notifications
+            15 - Notifications
+            16 - Toggle Qs Panel
+            17 - Ringer Modes
+         This needs to match the enums in
+         sdk/src/java/org/lineageos/internal/util/DeviceKeysConstants.java.
+    -->
+    <integer name="config_doubleTapOnAssistBehavior">3</integer>
 
     <!-- Indicates that the device has Single-stage Camera key
          (without "Focus" state) instead of Dual-stage. -->
